fix layout broken issues

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<!-- <button type="button" class="btn_toggle">Wine Tarot</button> -->
 		<aside class="aside">
 			<section class="left">	<!-- 左section -->
-				<div id="tparty">左上</div>
+				<div id="tparty"><img src="./img/tparty.png" alt="">左上</div>
 				<div id="tdesc">左下</div>
 				<!-- <img src="./img/tparty.jpg" alt=""> -->
 				<!-- <div class="parent_flex">		  
@@ -73,6 +73,12 @@
 				</div> -->
 		   </section> <!-- 左section -->
 
+
+
+
+
+
+		   
 		   <section class="right"> <!-- 右section -->
 			    <div class="h3title">
 				   <h3>WINE NOT? <br> Online Tarot</h3>
