--- a/details.html
+++ b/details.html
@@ -4,7 +4,7 @@
     <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Details</title>
     <link rel="icon" href="./logo.png">
-    <link href="./Details.css" rel="stylesheet">
+    <link href="./css/details.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rozha+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
