--- a/det.html
+++ b/det.html
@@ -13,7 +13,7 @@
     <!-- 字體 -->
 
 
-    <title>detail</title>
+    <title>Detail</title>
     <!-- 套用 -->
 	<link rel="stylesheet" href="./css/det.css">
 	<script src="js/jquery.min.js"></script>
@@ -39,7 +39,7 @@
 
   	
 	<div class="vessel"> <!-- 包住main和aside的大框  -->
-		<h2 class="chateau">HOT LINKS</h2>
+		<h2 class="chateau">Details</h2>
 
 		<aside class="aside">
 			
@@ -50,7 +50,7 @@
 	
 
 				<div class="big">
-					<img id="large" src="../img/transparent4.png">
+					<img id="large" src="../img/detail.png">
 			    </div>
 			  
 			</section>  
