tarot function, add product page, total: 7 pages

--- a/gift.html
+++ b/gift.html
@@ -94,8 +94,20 @@
 
 				<div class="change">
 				<h1 id="h1title">Garde tes rêves.<br></h1>
+				<p>Kiara Bella 750ml*1 + LOBO 750ml*1 / PO:(KBLB7575)</p>
 				<hr>
-				<p id="demo"><b>|Kiara Bella 750ml*1 + LOBO 750ml*1| <br> PO:(KBLB7575) <br></b>		
+					<ul id="demo">
+						<li>Vineyard size:</li>
+						<li>18.7 hectares (45.8 acres)</li>
+						<br>
+						<li>Vineyard grape varietals:</li>
+						<li>91% Merlot – 6% Cabernet Franc – 3% Petit Verdot</li>
+						<br>
+						<li>Soil types:</li>
+						<li>Gravel and deep clay on iron-rich subsoil</li>
+					</ul>
+
+				<!-- <p id="demo"><b>|Kiara Bella 750ml*1 + LOBO 750ml*1| <br> PO:(KBLB7575) <br></b>		
 					<br>Vineyard size:
 					<br>18.7 hectares (45.8 acres)
 			
@@ -106,7 +118,7 @@
 					<br>Gravel and deep clay on iron-rich subsoil
 					
 				<br>
-				</p>
+				</p> -->
 				</div>
 
 			
