--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		
 		<div class="slider">
 			<div class="slimg"><a href=""><img src="./img/banner3.jpeg" alt=""></a></div>
-			<div class="slimg"><img src="./img/display0.png" alt=""></div>
+			<div class="slimg"><img src="./img/display6.png" alt=""></div>
 			<div class="slimg"><img src="./img/display1.png" alt=""></div>
 		</div>
 
@@ -134,6 +134,7 @@
 
 				<div id="tdesc1">
 					456
+					<!-- <video src="#"></video> -->
 					<!-- <div class="online5">
 						<input type="button" class="online_submit" value="Book Tickets">
 					</div> -->
@@ -274,15 +275,15 @@
 					</li>
 
 					<li class="opt2">
-						<a href="http://www.google.com" target="_blank">Laffite</a>
+						<a href="./product.html" target="_blank">Products</a>
 					</li>
 
 					<li class="opt3">
-						<a href="http://www.google.com" target="_blank">Pettrus</a>
+						<a href="http://www.google.com" target="_blank">Brands</a>
 					</li>
 
 					<li class="opt4">
-						<a href="http://www.google.com" target="_blank">Moutton</a>
+						<a href="http://www.google.com" target="_blank">Tarot</a>
 					</li>
 
 					<li class="opt5">
