--- a/新增資料夾/tarot.css.html
+++ b/新增資料夾/tarot.css.html
@@ -287,8 +287,8 @@
 
 			function showCard(){
 				var arr_img=['./img/card0.png', './img/card1.png', './img/card2.png', './img/card3.png', './img/card4.png', './img/card5.png', './img/card6.png', './img/card7.png', './img/card8.png', './img/card9.png', './img/card10.png', './img/card11.png', './img/card12.png', './img/card13.png', './img/card14.png', './img/card15.png', './img/card16.png', './img/card17.png', './img/card18.png'];
-				var arr_title_desc=['1', '2', '3', '4', '5', '6', '7', '8', '9', '10','11', '12', '13', '14', '15', '16','17', '18'];
-				var arr_demo_desc=['1', '2', '3', '4', '5', '6', '7', '8', '9', '10','11', '12', '13', '14', '15', '16','17', '18'];
+				var arr_title_desc=['Aries', 'Taurus', 'Gemini', 'Cancer','Leo', 'Virgo'];
+				var arr_demo_desc=['Libra', 'Scorpio', 'Sagittarius', 'Capricorn', 'Aquarius', 'Pisces'];
 				var arr_result = document.getElementsByClassName("result");
 				var retry = 100000, i, lotto_num;
 
