gift ok but detail not

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,8 @@
     <!-- 字體 -->
 
 
-    <title>Contact</title>
+	<title>Contact</title>
+	<link rel="icon" href="./img/logo.ico" type="image/x-icon"/>
     <!-- 套用 -->
 	<link rel="stylesheet" href="./css/contact.css">
 	<script src="js/jquery.min.js"></script>
