--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <!-- 字體 -->
 
 
-    <title>index</title>
+	<title>index</title>
+	<link rel="icon" href="./img/logo.ico" type="image/x-icon"/>
     <!-- 套用 -->
 	<link rel="stylesheet" href="./css/index.css">
 	<script src="js/jquery.min.js"></script>
@@ -271,7 +272,7 @@
 		</div> <!-- .stamp -->
 			<ul class="optbar">
 					<li class="opt1">
-						<a href="http://tw.yahoo.com" target="_blank">Contact</a>
+						<a href="./contact.html" target="_blank">Contact</a>
 					</li>
 
 					<li class="opt2">
@@ -279,19 +280,19 @@
 					</li>
 
 					<li class="opt3">
-						<a href="http://www.google.com" target="_blank">Brands</a>
+						<a href="./brand.html" target="_blank">Brands</a>
 					</li>
 
 					<li class="opt4">
-						<a href="http://www.google.com" target="_blank">Tarot</a>
+						<a href="./tarot.html" target="_blank">Tarot</a>
 					</li>
 
 					<li class="opt5">
-					<a href="http://www.google.com" target="_blank">Gift Set</a>
+					<a href="./gift.html" target="_blank">Gift Set</a>
 					</li>
 
 					<li class="opt6">
-					<a href="http://www.google.com" target="_blank"><i class="fas fa-shopping-bag"></i> Quote</a>
+					<a href="#" target="_blank"><i class="fas fa-shopping-bag"></i> Quote</a>
 					</li>
 		
 			</ul><!--.optbar -->
