--- a/product.html
+++ b/product.html
@@ -13,7 +13,8 @@
     <!-- 字體 -->
 
 
-    <title>Product</title>
+	<title>Product</title>
+	<link rel="icon" href="./img/logo.ico" type="image/x-icon"/>
     <!-- 套用 -->
 	<link rel="stylesheet" href="./css/product.css">
 	<script src="js/jquery.min.js"></script>
@@ -434,31 +435,31 @@
 <!-- 導覽列 -->
 	<nav>
 		<div class="stamp">
-			<a href="#"><img src="./img/logo.ico"></a>
+			<a href="./index.html"><img src="./img/logo.ico"></a>
 		</div> <!-- .stamp -->
 			<ul class="optbar">
 					<li class="opt1">
-						<a href="http://tw.yahoo.com" target="_blank">Contact</a>
+						<a href="./contact.html" target="_blank">Contact</a>
 					</li>
 
 					<li class="opt2">
-						<a href="http://www.google.com" target="_blank">Laffite</a>
+						<a href="./product.html" target="_blank">products</a>
 					</li>
 
 					<li class="opt3">
-						<a href="http://www.google.com" target="_blank">Pettrus</a>
+						<a href="./brand.html" target="_blank">brands</a>
 					</li>
 
 					<li class="opt4">
-						<a href="http://www.google.com" target="_blank">Moutton</a>
+						<a href="./tarot.html" target="_blank">tarot</a>
 					</li>
 
 					<li class="opt5">
-					<a href="http://www.google.com" target="_blank">Gift Set</a>
+					<a href="./gift.html" target="_blank">Gift Set</a>
 					</li>
 
 					<li class="opt6">
-					<a href="http://www.google.com" target="_blank"><i class="fas fa-shopping-bag"></i> Quote</a>
+					<a href="#" target="_blank"><i class="fas fa-shopping-bag"></i> Quote</a>
 					</li>
 		
 			</ul><!--.optbar -->
