--- a/gift.html
+++ b/gift.html
@@ -13,7 +13,8 @@
     <!-- 字體 -->
 
 
-    <title>Gift Basket</title>
+	<title>Gift Basket</title>
+	<link rel="icon" href="./img/logo.ico" type="image/x-icon"/>
     <!-- 套用 -->
 	<link rel="stylesheet" href="./css/gift.css">
 	<script src="js/jquery.min.js"></script>
