--- a/tarot.html
+++ b/tarot.html
@@ -249,27 +249,27 @@
 		</div> <!-- .stamp -->
 			<ul class="optbar">
 					<li class="opt1">
-						<a href="http://tw.yahoo.com" target="_blank">Contact</a>
+						<a href="http://tw.yahoo.com" >Contact</a>
 					</li>
 
 					<li class="opt2">
-						<a href="http://www.google.com" target="_blank">Laffite</a>
+						<a href="http://www.google.com" >products</a>
 					</li>
 
 					<li class="opt3">
-						<a href="http://www.google.com" target="_blank">Pettrus</a>
+						<a href="http://www.google.com" >brands</a>
 					</li>
 
 					<li class="opt4">
-						<a href="http://www.google.com" target="_blank">Moutton</a>
+						<a href="http://www.google.com" >tarot</a>
 					</li>
 
 					<li class="opt5">
-						<a href="http://www.google.com" target="_blank">Gift Set</a>
+						<a href="http://www.google.com" >gift set</a>
 					</li>
 
 					<li class="opt6">
-						<a href="http://www.google.com" target="_blank"><i class="fas fa-shopping-bag"></i> Quote</a>
+						<a href="http://www.google.com"><i class="fas fa-shopping-bag"></i> Quote</a>
 					</li>
 		
 			</ul><!--.optbar -->
