--- a/product.html
+++ b/product.html
@@ -439,27 +439,27 @@
 		</div> <!-- .stamp -->
 			<ul class="optbar">
 					<li class="opt1">
-						<a href="./contact.html" target="_blank">Contact</a>
+						<a href="./contact.html" >Contact</a>
 					</li>
 
 					<li class="opt2">
-						<a href="./product.html" target="_blank">products</a>
+						<a href="./product.html" >products</a>
 					</li>
 
 					<li class="opt3">
-						<a href="./brand.html" target="_blank">brands</a>
+						<a href="./brand.html" >brands</a>
 					</li>
 
 					<li class="opt4">
-						<a href="./tarot.html" target="_blank">tarot</a>
+						<a href="./tarot.html" >tarot</a>
 					</li>
 
 					<li class="opt5">
-					<a href="./gift.html" target="_blank">Gift Set</a>
+					<a href="./gift.html" >Gift Set</a>
 					</li>
 
 					<li class="opt6">
-					<a href="#" target="_blank"><i class="fas fa-shopping-bag"></i> Quote</a>
+					<a href="#"><i class="fas fa-shopping-bag"></i> Quote</a>
 					</li>
 		
 			</ul><!--.optbar -->
