--- a/contact.html
+++ b/contact.html
@@ -270,29 +270,29 @@
 			<a href="#"><img src="./img/logo.ico"></a>
 		</div> <!-- .stamp -->
 			<ul class="optbar">
-					<li class="opt1">
-						<a href="http://tw.yahoo.com" target="_blank">Contact</a>
-					</li>
+				<li class="opt1">
+					<a href="./contact.html" >Contact</a>
+				</li>
 
-					<li class="opt2">
-						<a href="http://www.google.com" target="_blank">Laffite</a>
-					</li>
+				<li class="opt2">
+					<a href="./product.html" >Product</a>
+				</li>
 
-					<li class="opt3">
-						<a href="http://www.google.com" target="_blank">Pettrus</a>
-					</li>
+				<li class="opt3">
+					<a href="./brand.html" > &thinsp;brands</a>
+				</li>
 
-					<li class="opt4">
-						<a href="http://www.google.com" target="_blank">Moutton</a>
-					</li>
+				<li class="opt4">
+					<a href="./tarot.html" > &thinsp; Tarot &thinsp;</a>
+				</li>
 
-					<li class="opt5">
-					<a href="http://www.google.com" target="_blank">Gift Set</a>
-					</li>
+				<li class="opt5">
+				<a href="./gift.html" >Gift Set</a>
+				</li>
 
-					<li class="opt6">
-					<a href="http://www.google.com" target="_blank"><i class="fas fa-shopping-bag"></i> Quote</a>
-					</li>
+				<li class="opt6">
+				<a href="#" ><i class="fas fa-shopping-bag"></i> Quote</a>
+				</li>
 		
 			</ul><!--.optbar -->
 	</nav>
