--- a/gift.html
+++ b/gift.html
@@ -13,7 +13,7 @@
     <!-- 字體 -->
 
 
-	<title>Gift Basket</title>
+	<title>Gift Set</title>
 	<link rel="icon" href="./img/logo.ico" type="image/x-icon"/>
     <!-- 套用 -->
 	<link rel="stylesheet" href="./css/gift.css">
@@ -74,7 +74,7 @@
 
 	<header.thinbanner>
 		<!-- <img src="./"> -->
-		<h1 class="ml2">Gift Basket</h1>
+		<h1 class="ml2">Gift Set</h1>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 	</header>
 
@@ -459,29 +459,29 @@
 			<a href="./index.html"><img src="./img/logo.ico"></a>
 		</div> <!-- .stamp -->
 			<ul class="optbar">
-					<li class="opt1">
-						<a href="./contact.html" target="_blank">Contact</a>
-					</li>
+				<li class="opt1">
+					<a href="./contact.html" >Contact</a>
+				</li>
 
-					<li class="opt2">
-						<a href="./product.html" target="_blank">products</a>
-					</li>
+				<li class="opt2">
+					<a href="./product.html" >Product</a>
+				</li>
 
-					<li class="opt3">
-						<a href="./brand.html" target="_blank">brands</a>
-					</li>
+				<li class="opt3">
+					<a href="./brand.html" > &thinsp;brands</a>
+				</li>
 
-					<li class="opt4">
-						<a href="./tarot.html" target="_blank">tarot</a>
-					</li>
+				<li class="opt4">
+					<a href="./tarot.html" > &thinsp; Tarot &thinsp;</a>
+				</li>
 
-					<li class="opt5">
-					<a href="./gift.html" target="_blank">Gift Set</a>
-					</li>
+				<li class="opt5">
+				<a href="./gift.html" >Gift Set</a>
+				</li>
 
-					<li class="opt6">
-					<a href="#" target="_blank"><i class="fas fa-shopping-bag"></i> Quote</a>
-					</li>
+				<li class="opt6">
+				<a href="#" ><i class="fas fa-shopping-bag"></i> Quote</a>
+				</li>
 		
 			</ul><!--.optbar -->
 	</nav>
