--- a/detail.html
+++ b/detail.html
@@ -89,7 +89,7 @@
 			
 				
                     <div class="big">
-                         <div class="bigimg"><img  id="large" src="./img/transparent4.png"></div>
+                         <div class="bigimg"><img  id="large" src="./img/small.png"></div>
                     </div>			
 
 				
@@ -125,7 +125,7 @@
 		    <div class="right">
 
 				<div class="small">
-					<button type="button" onclick="ChangeText0()"><img src="./img/picaso.png" ></button> 
+					<button type="button" onclick="ChangeText0()"><img src="./img/small.png" ></button> 
 					<button type="button" onclick="ChangeText1()"><img src="./img/back.png" ></button>
 					<button type="button" onclick="ChangeText2()"><img src="./img/cap0.png" ></button> 
 					<button type="button" onclick="ChangeText3()"><img src="./img/label1.png" ></button>
