optbar 80% width 100% vessel margin auto 0 slimg

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 	<header> <!-- header就是輪播圖而已 -->
 		
 		<div class="slider">
-			<div class="slimg"><a href=""><img src="./img/banner3.jpeg" alt=""></a></div>
-			<div class="slimg"><img src="./img/display6.png" alt=""></div>
-			<div class="slimg"><img src="./img/display1.png" alt=""></div>
+			<div class="slimg"><a href=""><img src="./img/sli0.jpeg" alt=""></a></div>
+			<div class="slimg"><img src="./img/sli2.png" alt=""></div>
+			<div class="slimg"><img src="./img/sli3.png" alt=""></div>
 		</div>
 
 	</header> <!-- header就是輪播圖而已 -->
@@ -130,7 +130,7 @@
 			<section class="left">	<!-- 左section -->
 
 				<div id="tdesc1">
-					456
+					
 					<!-- <video src="#"></video> -->
 					<!-- <div class="online5">
 						<input type="button" class="online_submit" value="Book Tickets">
